# LinuxTracepoints

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  SUPPORT.md  version.cmake
.github/: CMake.yml  CODEOWNERS
.github/workflows/: CMake.yml  Rust.yml
TestOutput/: EventHeaderInterceptorLE64.dat.dotnet.json  EventHeaderInterceptorLE64.dat.linux.json  EventHeaderInterceptorLE64.dat.windows.json  perf.data  perf.data.linux.json  perf.data.windows.json  pipe.data  pipe.data.linux.json  pipe.data.windows.json
libeventheader-decode-cpp/: CMakeLists.txt  README.md
libeventheader-decode-cpp/include/PerfDataDecode/: PerfByteReader.h  PerfDataAbi.h  PerfDataFile.h  PerfDataReader.h  PerfEventMetadata.h
libeventheader-decode-cpp/include/eventheader/: EventEnumerator.h  EventFormatter.h
libeventheader-decode-cpp/samples/: CMakeLists.txt  decode-file.cpp  decode-live-sample.cpp  decode-perf.cpp
libeventheader-decode-cpp/src/: CMakeLists.txt  EventEnumerator.cpp  EventFormatter.cpp  PerfByteReader.cpp  PerfDataAbi.cpp  PerfDataFile.cpp  PerfDataReader.cpp  PerfEventMetadata.cpp
libeventheader-decode-cpp/tools/: CMakeLists.txt  decode-perf.cpp  perf-decode.cpp
libeventheader-decode-cpp/utest/: CMakeLists.txt  decode-dat-utest.cpp  decode-perf-utest.cpp
libeventheader-decode-dotnet/: CMakeLists.txt  README.md
libeventheader-decode-dotnet/samples/: CMakeLists.txt  decode-files.cs
libeventheader-decode-dotnet/src/: CMakeLists.txt  EventEnumerator.cs  EventHeader.cs  EventInfo.cs  EventItemInfo.cs  EventUtility.cs
libeventheader-tracepoint/: CMakeLists.txt  README.md
libeventheader-tracepoint/include/: CMakeLists.txt
libeventheader-tracepoint/include/eventheader/: EventHeaderDynamic.h  TraceLoggingProvider.h  eventheader-tracepoint.h  eventheader.h
libeventheader-tracepoint/samples/: CMakeLists.txt  TestProviderCommon.h  dynamic-sample.cpp  eventheader-register.cpp  interceptor-sample.cpp  provider-sample.cpp  tracepoint-file.cpp  tracepoint-file.h  tracepoint-sample.cpp
libeventheader-tracepoint/src/: CMakeLists.txt  eventheader-tracepoint.c  eventheader-tracepointConfig.cmake.in
libeventheader-tracepoint/tools/: CMakeLists.txt  eventheader-register.cpp
libeventheader-tracepoint/utest/: CMakeLists.txt  TestCommon.cpp  TestCommon.h  TestDynamic.cpp  dat-utest.cpp  tracepoint-generate.cpp
libtracepoint/: CMakeLists.txt  README.md
libtracepoint-control-cpp/: CMakeLists.txt  README.md
libtracepoint-control-cpp/include/tracepoint/: TracepointCache.h  TracepointName.h  TracepointPath.h  TracepointSession.h  TracepointSpec.h  TracingCache.h  TracingPath.h  TracingSession.h
libtracepoint-control-cpp/samples/: CMakeLists.txt  circular-snap.cpp  control-lookup.cpp  control-session.cpp  save-session.cpp
libtracepoint-control-cpp/src/: CMakeLists.txt  TracepointCache.cpp  TracepointPath.cpp  TracepointSession.cpp  TracepointSpec.cpp  TracingCache.cpp  TracingPath.cpp  TracingSession.cpp  UniqueHandles.cpp  tracepoint-controlConfig.cmake.in
libtracepoint-control-cpp/tools/: CMakeLists.txt  perf-collect.cpp  tracepoint-collect.cpp
libtracepoint-decode-cpp/: CMakeLists.txt
libtracepoint-decode-cpp/include/tracepoint/: PerfByteReader.h  PerfDataFile.h  PerfDataFileDefs.h  PerfDataFileWriter.h  PerfEventAbi.h  PerfEventInfo.h  PerfEventMetadata.h  PerfEventSessionInfo.h
libtracepoint-decode-cpp/samples/: CMakeLists.txt  perf-file-rewrite.cpp
libtracepoint-decode-cpp/src/: CMakeLists.txt  PerfByteReader.cpp  PerfDataAbi.cpp  PerfDataFile.cpp  PerfDataFileWriter.cpp  PerfEventAbi.cpp  PerfEventInfo.cpp  PerfEventMetadata.cpp  PerfEventSessionInfo.cpp
libtracepoint/include/: CMakeLists.txt
libtracepoint/include/tracepoint/: tracepoint-impl.h  tracepoint-provider.h  tracepoint-state.h  tracepoint.h
libtracepoint/samples/: CMakeLists.txt  api-sample.c  tracepoint-sample.c
libtracepoint/src/: CMakeLists.txt  tracepoint.c  tracepointConfig.cmake.in
libtracepoint/tools/: CMakeLists.txt  tracepoint-register.cpp
libtracepoint/utest/: CMakeLists.txt  provider-utest-c.c  tpp-utest-cpp.cpp  tracepoint-utest.cpp
rust/: Cargo.toml  README.md
rust/eventheader/: Cargo.toml  README.md
rust/eventheader/examples/: generate_events.rs  register.rs
rust/eventheader/src/: _internal.rs  changelog.rs  descriptors.rs  enums.rs  guid.rs  lib.rs  native.rs  provider.rs
rust/eventheader/tests/: tests.rs
rust/eventheader_dynamic/: Cargo.toml  README.md
rust/eventheader_dynamic/examples/: sample.rs
rust/eventheader_dynamic/src/: builder.rs  changelog.rs  lib.rs  provider.rs
rust/eventheader_dynamic/tests/: tests.rs
rust/eventheader_macros/: Cargo.toml  README.md
rust/eventheader_macros/examples/: print_field_options.rs
rust/eventheader_macros/src/: enabled_generator.rs  enabled_info.rs  enums.rs  errors.rs  event_generator.rs  event_info.rs  field_info.rs  field_option.rs  field_options.rs  ident_builder.rs  lib.rs  provider_generator.rs  provider_info.rs  strings.rs  tree.rs
