[package]
name = "eventheader"
version = "0.1.0"
edition = "2021"
authors = ["Microsoft"]
license = "MIT"
description = "Rust API for eventheader-encoded Linux Tracepoints via user_events"
keywords = [
    "user_events",
    "eventheader",
    "tracepoints",
    "trace",
    "logging",
]
categories = [
    "api-bindings",
    "development-tools::debugging",
    "development-tools::profiling",
    "no-std",
    "os::linux-apis",
]
repository = "https://github.com/microsoft/LinuxTracepoints"
readme = "README.md"
rust-version = "1.63"

[features]
default = ["user_events", "macros"]
user_events = [] # Logging is enabled if linux && user_events.
macros = ["dep:eventheader_macros"]

[dependencies]
eventheader_macros = { optional = true, version = "= 0.1.0", path = "../eventheader_macros" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { default-features = false, version = "0.2" }

[dev-dependencies]
uuid  = ">= 1.1"
