[package]
name = "eventheader_dynamic"
version = "0.1.0"
edition = "2021"
authors = ["Microsoft"]
license = "MIT"
description = "Rust API for runtime-specified eventheader-encoded Linux Tracepoints via user_events"
keywords = [
    "user_events",
    "eventheader",
    "tracepoints",
    "trace",
    "logging",
    "Linux",
]
categories = [
    "api-bindings",
    "development-tools::debugging",
    "development-tools::profiling",
    "no-std",
]
rust-version = "1.63"

[features]
default = ["user_events"]
user_events = ["eventheader/user_events"] # Logging is enabled if Linux && user_events.

[dependencies]
eventheader = { default-features = false, version = "= 0.1.0", path = "../eventheader" }

[dev-dependencies]
uuid  = ">= 1.1"
